[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
h3 = { path = "../h3", features = ["tracing"] }
h3-quinn = { path = "../h3-quinn", features = ["tracing", "datagram"] }
h3-webtransport = { path = "../h3-webtransport" }
http = "1"
quinn = { git = "https://github.com/iadev09/quinn.git", branch = "server-config-acceptor", default-features = false, features = [
    "runtime-tokio",
    "rustls-aws-lc-rs",
] }
rcgen = { version = "0.14" }
rustls = { version = "0.24.0-dev.0", default-features = false, features = ["log", "webpki"] }
rustls-aws-lc-rs = { version = "0.1.0-dev.0", default-features = false, features = ["aws-lc-sys", "std"] }
rustls-util = { version = "0.1.0-dev.0" }
rustls-native-certs = "0.8"
structopt = "0.3"
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.3.0"

tracing-tree = { version = "0.4" }
h3-datagram = { path = "../h3-datagram" }

[features]
tree = []

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "webtransport_server"
path = "webtransport_server.rs"
